# vk_bot

./: .gitignore  ASYNC.py  LICENSE  README.md  acync_bot_alpha.py  bot.py  bot_working.py  chat.txt  config_template.yaml  functions.py  main.py  mark.py  pyproject.toml  send.py  test_bot.py  text.txt
.github/workflows/: codeql-analysis.yml
data/: 125928980.txt  150078285.txt  206312673.txt  207227130.txt  218917421.txt  236709769.txt  240702553.txt  62501050.txt  a.txt  actual.txt  anekdot.txt  chat.txt  dinya.txt  help.txt  ira.txt  kolya.txt  log.txt  motya.txt  nekit.txt  part1.txt  part2.txt  part3.txt  part4.txt  sasha.txt  semen.txt  vlad.txt
processing/: README.md  begin.sh  conv.py  text_proc.py  words.js
scripts/: MBot.py  bot.py  dicks_sizes.csv  functions.py  gen.txt  help.txt  last_cringe_day  main.py  mark.py  mark.py.save  mubert.py  text_proc.py
src/: __init__.py  dick_sizer.py  social_rating.py  use_cases.py  usecases.py  utils.py  vk_client.py
stat/: create_df.py  dataframe.csv  test.py
telegram_bot/: bot.js  package-lock.json  package.json
