[tool.poetry]
name = "vk_bot"
version = "0.1.0"
description = ""
authors = ["Denis Krasilnikov"]

[tool.poetry.dependencies]
python = "^3.8"
vk-api = "^11.9.9"
PyYAML = "^6.0"
click = "^8.1.3"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
