[tool.poetry]
name = "vk_bot"
version = "0.1.0"
description = ""
authors = ["Denis Krasilnikov"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
click = "^8.1.3"
pandas = "^1.4.3"
vkbottle = "^4.3.10"
loguru = "^0.6.0"
vk-api = "^11.9.9"
sentence-transformers = "^2.2.2"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
