[tool.poetry]
name = "vk_bot"
version = "0.1.0"
description = ""
authors = ["Denis Krasilnikov"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
vkbottle = "^4.3.10"
loguru = "^0.6.0"
vk-api = "^11.9.9"
sentence-transformers = "^2.2.2"
httpx = "^0.23.0"
torch = "1.12.1"
openai = "^0.27.2"
hydra-core = "^1.3.2"
pylint = "^2.17.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
